<resources>
    <string name="app_name">Assignment3</string>
    <string name="title_activity_alex">Alex Kirillov</string>
    <string name="app_logo_label">Team H</string>
    <string name="button_1">Eugene\'s world</string>
    <string name="button_2">Mr.Alex</string>
    <string name="button_3">Take Your Button</string>
    <string name="button_4">Take Your Button</string>
    <string name="bottom_label">Lab 3 team profile assignment for COMP2160</string>
    <string name="background_top_image">TODO</string>

    <string name="alex_activity_main_label">YES</string>

    <string name="zhuldyz">Zhuldyz</string>
    <string name="this_is_zhuldyz_s_page">This is Zhuldyz\'s page</string>
    <string name="zhuldyz_page">Zhuldyz page</string>
    <string name="me">me</string>
    <string name="Carlos_Title">Carlos Avila</string>
    <string name="Carlos_Activity">Carlos Avila</string>
    <string name="Carlos_imgDesc">Akali</string>
    <string name="study_bg">study_bg</string>
    <string name="zhuldyz_image">zhuldyz_image</string>
    <string name="name">Zhuldyz Ilyassova</string>
    <string name="email_dc">email: ilyassovaz19@mytru.ca</string>
    <string name="number_dc">number: +1-234-456-7890</string>
    <string name="email_img">email_img</string>
    <string name="phone_img">phone_img</string>
    <string name="my_education">My education</string>
    <string name="education_dc">I am pursuing Bachelor of Computing Science at Thompson Rivers University Minoring in Mathematics. My expected year of graduation is 2023.</string>
    <string name="my_hobbies">My Hobbies</string>
    <string name="hobby_1">Designing and development websites</string>
    <string name="hobby_2">Learning a new skill</string>
    <string name="hobby_3">Listening to music and watching movies</string>
    <string name="hobby_4">Keeping up with the latest developments in technology</string>
    <string name="image_ed">image_ed</string>
    <string name="dot_2">dot_2</string>
    <string name="dot_1">dot_1</string>
    <string name="image_emoji">image_emoji</string>
    <string name="dot_4">dot_4</string>
    <string name="dot_3">dot_3</string>
    <string name="shadowBox">shadowBox</string>
    <string name="Carlos_Email">ninoavila185@gmail.com</string>
    <string name="Carlos_photoDescription2">email_img</string>
    <string name="Carlos_photoDescription3">phone_img</string>
    <string name="Carlos_phoneNumber">+1 (778) 6948-953</string>
    <string name="Carlos_Bg1">Background_img</string>
    <string name="Carlos_Title2">My Education</string>
    <string name="Carlos_Title3">Hobbies</string>
    <string name="Carlos_Image4">Education_img</string>
    <string name="Carlos_Image5">Controller_img</string>
    <string name="Carlos_Text2">Playing Videogames</string>
    <string name="Carlos_Text3">Game Developing</string>
    <string name="Carlos_Text4">Cooking and Drawing</string>
    <string name="Carlos_Text1">Pursuing Bachelor of Computer Science, not any Major yet but Minoring in Project Management. Expected graduation year is 2023!</string>
</resources>