<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ZhuldyzActivity"
    android:background="@drawable/gradient_bg"
    >

    <ImageView
        android:id="@+id/image_bg"
        android:layout_width="852dp"
        android:layout_height="357dp"
        android:contentDescription="@string/study_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/case_study_background_jenzabar_final" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="132dp"
        android:layout_height="222dp"
        android:contentDescription="@string/zhuldyz_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_bg"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/circle_cropped" />

    <TextView
        android:id="@+id/name_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/image_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/email_dc"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number_dc"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <ImageView
        android:id="@+id/email_img"
        android:layout_width="40dp"
        android:layout_height="31dp"
        android:contentDescription="@string/email_img"
        app:layout_constraintBottom_toBottomOf="@+id/image_bg"
        app:layout_constraintEnd_toStartOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693"
        app:srcCompat="@drawable/bb18bdbbef437b2d50518db5a8292c94" />

    <ImageView
        android:id="@+id/phone_img"
        android:layout_width="38dp"
        android:layout_height="39dp"
        android:contentDescription="@string/phone_img"
        app:layout_constraintBottom_toBottomOf="@+id/image_bg"
        app:layout_constraintEnd_toStartOf="@+id/number"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_img"
        app:layout_constraintVertical_bias="0.213"
        app:srcCompat="@drawable/_2971_200" />

</androidx.constraintlayout.widget.ConstraintLayout>