<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2043C1"
    tools:context=".CarlosActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:text="@string/Carlos_Title"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#E91E63"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <ImageView
        android:id="@+id/Carlos_Image1"
        android:layout_width="189dp"
        android:layout_height="166dp"
        android:contentDescription="@string/Carlos_imgDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        app:srcCompat="@drawable/akali" />

    <EditText
        android:id="@+id/Carlos_editTextEmail"
        android:hint="@string/Carlos_Email"
        android:layout_width="205dp"
        android:layout_height="41dp"
        android:layout_marginTop="60dp"
        android:background="#00FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:text="@string/Carlos_Email"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Carlos_Image1" />

    <EditText
        android:id="@+id/Carlos_editTextPhone"
        android:hint="@string/Carlos_phoneNumber"
        android:layout_width="202dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:text="@string/Carlos_phoneNumber"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Carlos_editTextEmail" />

    <ImageView
        android:id="@+id/Carlos_Image2"
        android:layout_width="48dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/Carlos_photoDescription2"
        app:layout_constraintEnd_toStartOf="@+id/Carlos_editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/bb18bdbbef437b2d50518db5a8292c94" />

    <ImageView
        android:id="@+id/Carlos_Image3"
        android:layout_width="45dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/Carlos_photoDescription3"
        app:layout_constraintEnd_toStartOf="@+id/Carlos_editTextPhone"
        app:layout_constraintTop_toBottomOf="@+id/Carlos_Image2"
        app:srcCompat="@drawable/_2971_200" />

</androidx.constraintlayout.widget.ConstraintLayout>